# repeated-llm-games

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/runs/: all_144.yaml  llm_gw_multi.yaml  llm_gw_scot.yaml  llm_gw_stg.yaml  paper_default.yaml  paper_scot.yaml  robustness_cooking.yaml
docker/: postgres.Dockerfile
docs/results/: PAPER_COMPARISON.md  game_replay.html
docs/results/base/: results.md
docs/results/scot/: results.md
notebooks/: reproduce_figures.ipynb
scripts/: run-local.sh
src/llmgames/: cli.py  results.py
src/llmgames/config/: loader.py  schema.py
src/llmgames/engine/: families.py  game.py  outcomes.py  payoff.py
src/llmgames/loop/: match.py  tournament.py
src/llmgames/metrics/: bos_metrics.py  human.py  pd_metrics.py  prediction.py  score_ratio.py
src/llmgames/players/: base.py  llm_player.py  parser.py  strategies.py
src/llmgames/prompts/: builder.py  loader.py  render.py  transforms.py
src/llmgames/prompts/templates/: base_decision.md  base_decision_reasoned.md  history_line.md  rules_intro.md  rules_outcome.md  scot_decide.md  scot_decide_reasoned.md  scot_predict.md  scot_predict_reasoned.md
src/llmgames/providers/: anthropic_provider.py  base.py  cache.py  litellm_provider.py  mock_provider.py  models.py  openai_provider.py  registry.py
src/llmgames/viz/: comparison.py  heatmaps.py  prediction_plots.py  replay.py  trajectories.py
