[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmgames"
version = "0.1.0"
description = "Model-agnostic reproduction of Akata et al. (2025), 'Playing repeated games with LLMs'."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.40"]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
llmgames = "llmgames.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
